...
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Y4h-qI-oKg">
                                <rect key="frame" x="127" y="96" width="160" height="32"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mw8-S1-3GG" customClass="SpinnerButton" customModule="ThumbnailApp" customModuleProvider="target">
                                        <rect key="frame" x="64" y="5" width="94" height="30"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="Load Pictures">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="5"/>
                                            </userDefinedRuntimeAttribute>
...
            </objects>
            <point key="canvasLocation" x="21.739130434782609" y="89.732142857142847"/>
        </scene>
        <!--Images Collection View Controller-->
        <scene sceneID="3oQ-rc-BBe">
            <objects>
                <collectionViewController id="imR-TZ-JTX" customClass="ImagesCollectionViewController" customModule="ThumbnailApp" sceneMemberID="viewController">
                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="l8C-0H-9AW">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="754"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="eda-Mk-zkn">
                            <size key="itemSize" width="414" height="284"/>
...
                                        <constraint firstItem="ygd-mt-1cA" firstAttribute="top" secondItem="jDO-VJ-wpB" secondAttribute="bottom" constant="8" id="nsL-57-YGW"/>
                                        <constraint firstAttribute="bottom" secondItem="ygd-mt-1cA" secondAttribute="bottom" constant="8" id="uID-J3-SDI"/>
                                    </constraints>
                                </collectionViewCellContentView>
                                <size key="customSize" width="414" height="275"/>
                                <connections>
                                    <outlet property="btnNext" destination="xBv-kh-C4g" id="xG6-12-u7l"/>
                                    <outlet property="btnZoom" destination="Ya6-T0-YEL" id="cBD-c2-Ggl"/>
                                    <outlet property="lblCaption" destination="FDx-TH-Dq0" id="h6q-zP-zgj"/>
                                    <outlet property="thumbnailWrapper" destination="jDO-VJ-wpB" id="gHY-6D-3Gh"/>
                                </connections>
                            </collectionViewCell>
                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="errorCell" id="e6x-qr-5bd" customClass="ErrorCollectionCell" customModule="ThumbnailApp" customModuleProvider="target">
                                <rect key="frame" x="0.0" y="285" width="414" height="275"/>
...
                            <constraint firstItem="Nko-N8-wCi" firstAttribute="leading" secondItem="ldg-m9-yki" secondAttribute="leading" id="jVp-Xv-yEd"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="AaE-mS-HNk"/>
                    <connections>
                        <outlet property="btnDisLike" destination="jQQ-mA-Qmy" id="cJb-kb-dW3"/>
                        <outlet property="btnLike" destination="1up-Pv-Mi6" id="9s0-cw-47q"/>
                        <outlet property="lblCaption" destination="XKU-bm-U7c" id="wJ1-mh-1OL"/>
                        <outlet property="lblLikeCounts" destination="TH9-eK-zYC" id="Ajp-64-Kz5"/>
                        <outlet property="tblCommentsList" destination="ctK-q1-chr" id="Gl4-eA-BLs"/>
                        <outlet property="textFieldBottomConstraint" destination="YiI-in-LWm" id="UEZ-ki-nsH"/>
                        <outlet property="txtWriteComment" destination="tfa-Oo-hLU" id="NBD-w1-ChE"/>
                        <outlet property="viewWebViewWrapper" destination="7U1-Fa-AfX" id="I6Y-mm-BrD"/>
                        <outlet property="viewWrapperCount" destination="qPL-xt-Foi" id="4pg-k6-B8G"/>
                        <outlet property="viewWrapperDisLikes" destination="hKC-ff-6Ni" id="a4x-7V-QG7"/>
                        <outlet property="viewWrapperLikes" destination="kKE-fd-hky" id="14Z-Dt-fj3"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="uVw-XD-UOU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
