...
        URLSession.shared.dataTask(with: url) { data, response, error in
            guard let data = data, error == nil else {
                DispatchQueue.main.async() { [weak self] in
                    self?.loadingSpinner.isHidden = true
                    self?.loadingSpinner.stopAnimation()
                }
                return
            }
            
            guard let imageData = UIImage(data: data) else {
                DispatchQueue.main.async() { [weak self] in
                    self?.loadingSpinner.isHidden = true
                    self?.loadingSpinner.stopAnimation()
...
